# sar_simulation_ignition_gazebo

./: .gitmodules  README.md
sar_config/: CMakeLists.txt  Model_Types.yaml  Sim_Settings.yaml  package.xml
sar_control/: CMakeLists.txt  package.xml
sar_control/include/: Controller_GTC.h  Shared_Lib.h  Traj_Funcs.h  controller1.h  stabilizer.h
sar_control/include/Previous/: stabilizer.h
sar_control/src/: Controller_GTC.cpp  Shared_Lib.cpp  Traj_Funcs.cpp  stabilizer.cpp
sar_control/src/previous/: Declare Parameter.cpp  controller copy.cpp  controller1.cpp  practice.cpp
sar_data_converter/: CMakeLists.txt  package.xml
sar_data_converter/include/: SAR_DataConverter.h
sar_data_converter/src/: Data_Parsing.cpp  Data_Summary.cpp  Debug_Console.cpp  SAR_DataConverter.cpp
sar_env/: CMakeLists.txt  SAR_Base_Interface.py  SAR_Sim_Interface.py  __init__.py  package.xml  subscriber.py
sar_gazebo/: CMakeLists.txt  package.xml
sar_gazebo/models/: building_robot.sdf  my_world.world  practice.sdf  robot.sdf  robot1.sdf  robot2.sdf  robot3.sdf  robot4.sdf
sar_gazebo/models/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
sar_gazebo/models/log/: latest_build
sar_gazebo/models/models/model1/SAR_Base/: model.sdf
sar_gazebo/models/x3/: model.sdf
sar_gazebo/plugins/include/: DiffDrive.hh  JointController.hh  Motor_Plugin.h  MyJointControllerPlugin.h  MyJointControllerPlugin_1.h  MyPlugin.h  Practice.h  Practice.hh  SampleSystem.cc  SpeedLimiter.hh  Test.h
sar_gazebo/plugins/src/: DiffDrive.cc  JointController.cc  JointController1.cc  Motor_Plugin.cpp  MyJointControllerPlugin.cpp  MyJointControllerPlugin1.cpp  MyJointControllerPlugin_1.cpp  MyPlugin.cpp  MyStstemPlugin.cpp  Practice.cc  Practice.cpp  Test copy.cpp  Test.cpp  my_plugin.cpp
sar_gazebo/src/: MyPlugin.cpp  MyPlugin.h
sar_general/: CMakeLists.txt  package.xml
sar_general/scripts/: Control_Playground.py  control_playground.py
sar_general/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
sar_launch/: CMakeLists.txt  package.xml
sar_launch/launch/: set_parameter_launch.py  sim_settings_launch.py
sar_logging/: CMakeLists.txt  package.xml
sar_msgs/: CMakeLists.txt  package.xml
sar_msgs/msg/: CtrlData.msg  CtrlDebug.msg  IMUData.msg  MotorThrust.msg  ROSParams.msg  SARImpactData.msg  SARMiscData.msg  SARStateData.msg  SARTriggerData.msg  ViconData.msg
sar_msgs/srv/: CTRLCmdSrv.srv  CtrlCmdSrv.srv  LoggingCMD.srv  SetTrigger.srv
